# emotion-engine

./: README.md  SYSTEM_DOCUMENTATION.md  additional_context.md  benchmark_results.txt  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  env.example  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_conversations_memory.py
backend/app/: __init__.py  cli.py  cli_monitor.py  main.py
backend/app/agents/: __init__.py  base.py  coordinator.py  designer.py  environment.py  evaluator.py  human.py  memory.py
backend/app/api/: __init__.py  routes.py  runs.py  scenarios.py  seed.py  websocket.py
backend/app/core/: config.py  database.py
backend/app/llm/: __init__.py  base.py  ollama.py  router.py
backend/app/models/: __init__.py  agent.py  conversation.py  message.py  run.py  scenario.py  step.py
backend/app/scenarios/: __init__.py  airplane_crash.py  defaults.py  generator.py  mass_casualty.py  rising_flood.py  storage.py
backend/scenarios_generated/: .gitkeep  business_negotiation_scenario_20260104_145201.json  mystery_at_the_manor_20260104_144826.json  quake_crisis_20260104_190807.json  space_station_crisis_20260104_190911.json  tech_merger_negotiations_20260104_190859.json  trade_winds_20260104_160945.json
backend/tests/: __init__.py  conftest.py  test_agents.py  test_conversation.py  test_llm_client.py  test_memory.py  test_message_bus.py  test_scenarios.py  test_simulation.py  verify_autoresume.py
backend/tools/: benchmark_gemma.py  generate_scenario.py
(+33 files in other folders)
